syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.grpc";
option java_outer_classname = "NumberProto";

package numberservice;


service NumberService {

  rpc GetNumbers (NumberRequest) returns (stream NumberResponse) {}
}


message NumberRequest {
  int32 firstValue = 1;
  int32 lastValue = 2;
}


message NumberResponse {
  int32 currentValue = 1;
}